
bzr 2.3b1
#########

:Codename: ???
:2.3b1: NOT RELEASED YET

Compatibility Breaks
********************

* BzrError subclasses no longer support the name "message" to be used
  as an argument for __init__ or in _fmt format specification as this
  breaks in some Python versions. errors.LockError.__init__ argument
  is now named "msg" instead of earlier "message".
  (Parth Malwankar, #603461)

* `FileInWrongBranch` is deprecated in favour of `PathNotChild` and no
  longer raised.
  (Martin Pool)

* `tree_files` and `internal_tree_files` are now deprecated in favor of
  `WorkingTree.open_containing_paths`.
  (Martin Pool)

* `ControlDirFormat` and  `ControlDir` have been split out of `BzrDirFormat`
  and `BzrDir`, respectively. `ControlDirFormat`
  and `ControlDir` should be used as the base classes for new non-.bzr
  implementations.

  `BzrDirFormat.register_control_format` has been renamed to
  `ControlDirFormat.register_format`.

  `BzrDirFormat.register_server_control_format` has been removed.

  Probing for control directories is now done by separate objects derived
  from `bzrlib.controldir.Prober` and registered using
  `bzrlib.controldir.ControlDirFormat.register_prober` or
  `bzrlib.controldir.ControlDirFormat.register_server_prober`.
  `BzrDirFormat.probe_transport` has been moved onto `Prober`.

  `BzrDirFormat.register_format` has been renamed to 
  `BzrProber.register_bzrdir_format`.
  (Jelmer Vernooij)

* The old ``bzr selftest --benchmark`` option has been removed.
  <https://launchpad.net/bzr-usertest> is an actively-maintained
  macrobenchmark suite.
  (Martin Pool)

New Features
************

* The ``lp:`` prefix will now use your known username (from
  ``bzr launchpad-login``) to expand ``~`` to your username.  For example:
  ``bzr launchpad-login user && bzr push lp:~/project/branch`` will now
  push to ``lp:~user/project/branch``.  (John Arbash Meinel)

Bug Fixes
*********

* Allow using both --using and --diff-options. 